[package]
name = "secure-conductor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.*", features = ["string", "env"] }
heck = "0.5.*"
miette = { version = "7.2.*", features = ["fancy"] }
simplelog = "0.12.*"
thiserror = "1.0.*"
tokio = { version = "1.37.*", features = ["tracing", "signal", "macros", "rt", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

